exports[`LoadingOverlay should render a null component when isOpen is not provided 1`] = `
<Overlay
  backgroundStyle="light"
  className="terra-LoadingOverlay"
  isOpen={false}
  isRelativeToContainer={false}
  isScrollable={false}>
  <IconSpinner
    className="terra-LoadingOverlay-icon"
    data-name="Layer 1"
    height="36"
    isSpin={false}
    viewBox="0 0 48 48"
    width="36"
    xmlns="http://www.w3.org/2000/svg" />
  <div
    className="terra-LoadingOverlay-message">
    Loading...
  </div>
</Overlay>
`;

exports[`LoadingOverlay when isOpen is provided should render with message prop 1`] = `
<Overlay
  backgroundStyle="light"
  className="terra-LoadingOverlay"
  isOpen={true}
  isRelativeToContainer={false}
  isScrollable={false}>
  <IconSpinner
    className="terra-LoadingOverlay-icon"
    data-name="Layer 1"
    height="36"
    isSpin={false}
    viewBox="0 0 48 48"
    width="36"
    xmlns="http://www.w3.org/2000/svg" />
  <div
    className="terra-LoadingOverlay-message">
    Loading!
  </div>
</Overlay>
`;

exports[`LoadingOverlay when isOpen is provided the default LoadingOverlay should render a default component 1`] = `
<Overlay
  backgroundStyle="light"
  className="terra-LoadingOverlay"
  isOpen={true}
  isRelativeToContainer={false}
  isScrollable={false}>
  <IconSpinner
    className="terra-LoadingOverlay-icon"
    data-name="Layer 1"
    height="36"
    isSpin={false}
    viewBox="0 0 48 48"
    width="36"
    xmlns="http://www.w3.org/2000/svg" />
  <div
    className="terra-LoadingOverlay-message">
    Loading...
  </div>
</Overlay>
`;
